# crate-template

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  coverage_config.json
impl/: Cargo.toml
impl/src/: export_as_pub.rs  ffi.rs  lib.rs
src/: ffi.rs  lib.rs
